tests/NormalTests/paczka1/small_fuzzy/41694932.err
Error in line 2: v69Z7 S663 16,3
Error in line 5: 0Mo9Wgutu S663 42,3
Error in line 7: 0Mo9Wgutu A93 81,5
